<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/primarycolor"
    tools:context=".StopwatchActivity">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/stopwatch"
        android:textAlignment="center"
        android:textColor="@color/accentcolor"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/timerDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="00:00:00"
        android:textAlignment="center"
        android:textColor="@color/secondarycolor"
        android:textSize="64sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appTitle" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:layout_marginTop="16dp"
        android:indeterminateDrawable="@drawable/progress_bar_custom"
        android:max="300"
        android:progressDrawable="@drawable/progress_bar_custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timerDisplay" />


    <TextView
        android:id="@+id/dailyScoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dailyScore"
        android:textColor="@color/secondarycolor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressBar" />

    <TextView
        android:id="@+id/dailyScoreDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/accentcolor"
        app:layout_constraintTop_toBottomOf="@id/dailyScoreLabel"
        app:layout_constraintStart_toStartOf="@id/dailyScoreLabel"
        android:layout_marginTop="8dp" />


    <TextView
        android:id="@+id/highScoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HighScore"
        android:textColor="@color/secondarycolor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/dailyScoreLabel" />

    <TextView
        android:id="@+id/highScoreDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/accentcolor"
        app:layout_constraintTop_toBottomOf="@id/highScoreLabel"
        app:layout_constraintStart_toStartOf="@id/highScoreLabel"
        android:layout_marginTop="8dp" />


    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/highScoreDisplay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/accentcolor"
            android:padding="12dp"
            android:text="@string/Start"
            android:textColor="@color/primarycolor"
            android:textSize="18sp"
            app:cornerRadius="30dp" />

        <Button
            android:id="@+id/stopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#C82215"
            android:padding="12dp"
            android:text="@string/stop"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:cornerRadius="30dp" />


        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="@color/secondarycolor"
            android:padding="12dp"
            android:text="@string/Reset"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:cornerRadius="30dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
